@@ -1219,8 +1219,9 @@
 2) init.d: remove unneded delete generated by goahead scripts logic.<br>
 3) kernel: ralink_wifi: xxxx: fix fallback to 20MHz in some cases.<br>
 4) kernel: ralink_wifi: xxxx: fix mpdu default settings in some cases.<br>
-5) kernel: mips: handle page faults of executable but unreadable pages.<br>
-6) kernel: net: arp: filter NOARP neighbours for SIOCGARP.<br>
+5) kernel: ralink_wifi: xxxx: tune rate_ctl TrainUpHighThrd (110->100).<br>
+6) kernel: mips: handle page faults of executable but unreadable pages.<br>
+7) kernel: net: arp: filter NOARP neighbours for SIOCGARP.<br>
 <br>
 <br>
 <b>TODO:</b><br>
